fix width in menu-wraper

--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,6 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 0 50px;
-  width: 100%;
   height: 60px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 }
